--- a/view/index.html
+++ b/view/index.html
@@ -99,6 +99,9 @@
         </tbody>
     </table>
     <div id="shopping-final-price" ng-model="precioFinal">Precio Final: {{precioFinal}}€</div>
+    <div>
+        <img class="pay img-button" src="media/images/main/pay.png" alt="" height="30px" width="30px" ng-click="pay()">
+    </div>
 </div>
 
 
