--- a/view/index.html
+++ b/view/index.html
@@ -27,7 +27,7 @@
 <div id="productos" ng-show="action == 2 || action == 0">
     <div class="card" ng-repeat="producto in productos | filter : busqueda">
         <h1 class="card-type">{{producto.tipo}}</h1>
-        <div class="card-img" style="background-image: url({{producto.imagen}})">
+        <div class="card-img" style="background-image: url('{{producto.imagen}}')">
             <!-- IMG ON CSS -->
         </div>
         <h2 class="card-name">{{producto.nombre}}</h2>
@@ -45,7 +45,7 @@
 </div>
 
 <div id="insert" ng-show="action == 1">
-    <form>
+    <form ng-submit="insert()">
         <div class="form-group">
             <label for="nombre">Nombre: </label><input id="nombre" type="text">
         </div>
@@ -61,7 +61,10 @@
         <div class="form-group">
             <label for="imagen">Imagen: </label><input id="imagen" type="file" onchange="angular.element(this).scope().getFile(this)">
         </div>
-        <img class="card-img" src="{{imagePath}}"/>
+        <img class="card-img" src="{{defaultImage}}"/>
+        <div class="form-group">
+            <input type="submit" value="Añadir Producto">
+        </div>
     </form>
 </div>
 
